[gd_scene load_steps=16 format=3 uid="uid://feex0f35c6p7"]

[ext_resource type="Script" path="res://Scripts/erythis.gd" id="1_qbj2e"]
[ext_resource type="Texture2D" uid="uid://dqgybp4jcdts0" path="res://Sprites/erythis.png" id="3_o7wrd"]
[ext_resource type="AudioStream" uid="uid://cc1v6g5ckl7j" path="res://Audio/Ambient/something_looms.mp3" id="4_83dw4"]
[ext_resource type="Shader" path="res://Shaders/melt.gdshader" id="4_bp0no"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pq7io"]
size = Vector2(358, 346)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nha7f"]
size = Vector2(278, 1294)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_uluh2"]
particle_flag_disable_z = true
angular_velocity_min = -720.0
angular_velocity_max = 720.0
orbit_velocity_min = -0.295
orbit_velocity_max = 0.262
radial_velocity_min = 245.9
radial_velocity_max = 1000.0
gravity = Vector3(0, 0, 0)
linear_accel_min = -100.0
linear_accel_max = 100.0
radial_accel_min = -100.0
radial_accel_max = 100.0
scale_min = 9.19
scale_max = 50.18

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5m502"]
shader = ExtResource("4_bp0no")
shader_parameter/progress = 0.0
shader_parameter/meltiness = 14.671

[sub_resource type="AtlasTexture" id="AtlasTexture_d6yvq"]
atlas = ExtResource("3_o7wrd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0ykh"]
atlas = ExtResource("3_o7wrd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a854m"]
atlas = ExtResource("3_o7wrd")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vs746"]
atlas = ExtResource("3_o7wrd")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_8sfy4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6yvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0ykh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a854m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vs746")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_be1bn"]
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 180.0
initial_velocity_min = 1000.0
initial_velocity_max = 1000.0
gravity = Vector3(0, 0, 0)
scale_min = 16.0
scale_max = 58.38

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h0e6p"]
size = Vector2(355.226, 400.22)

[node name="boss" type="Area2D"]
collision_layer = 2
script = ExtResource("1_qbj2e")

[node name="boss_hitbox" type="Area2D" parent="."]
collision_mask = 5

[node name="collision" type="CollisionShape2D" parent="boss_hitbox"]
shape = SubResource("RectangleShape2D_pq7io")

[node name="start_detection" type="Area2D" parent="."]

[node name="trigger" type="CollisionShape2D" parent="start_detection"]
shape = SubResource("RectangleShape2D_nha7f")

[node name="death_particles" type="GPUParticles2D" parent="."]
emitting = false
amount = 64
process_material = SubResource("ParticleProcessMaterial_uluh2")

[node name="sprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_5m502")
position = Vector2(0, 60.0319)
scale = Vector2(13.875, 13.875)
sprite_frames = SubResource("SpriteFrames_8sfy4")
autoplay = "default"
offset = Vector2(0, -4.03478)

[node name="hover" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="attack" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="particles" type="GPUParticles2D" parent="."]
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_be1bn")
lifetime = 0.4
one_shot = true
explosiveness = 0.52

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 14.1098)
shape = SubResource("RectangleShape2D_h0e6p")

[node name="bosscam" type="Camera2D" parent="."]
zoom = Vector2(1.6, 1.6)

[node name="SomethingLooms" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-8, 14)
stream = ExtResource("4_83dw4")
volume_db = -15.327
autoplay = true
max_distance = 5000.0
attenuation = 0.378929

[connection signal="body_entered" from="boss_hitbox" to="." method="_on_damage_body_entered"]
[connection signal="body_entered" from="start_detection" to="." method="_on_start_detection_body_entered"]
[connection signal="timeout" from="hover" to="." method="_on_hover_timeout"]
[connection signal="timeout" from="attack" to="." method="_on_attack_timeout"]
